# Artificial_Intelligence_Projects

./: .gitignore  README.md
Sentiment Analysis/: basic.py  pyproject.toml
fastapi_crash/: README.md
fastapi_crud/: main.py  pyproject.toml
inventory_gpt/: pyproject.toml
rag-nlp-radar/: pyproject.toml
rag-nlp-radar/data/raw/: nlp_papers_20260131_001332.json
rag-nlp-radar/src/: fetch_papers.py  index_papers.py  main.py  rag_agent.py
vllm-chatbot/: README.md  app.py  chatbot.py  pyproject.toml
